--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "author": "Jon Wong <j@jnwng.com>",
   "description": "stylus plugin for wintersmith",
+  "keywords": ["wintersmith-plugin"],
   "license": "MIT",
   "dependencies": {
     "stylus": ">=0.19.x",
